--- a/pom.xml
+++ b/pom.xml
@@ -65,5 +65,20 @@
         <version>4.0.0-rc-2</version>
         <scope>runtime</scope>
     </dependency>
+    <dependency>
+       <groupId>org.glassfish.jersey.core</groupId>
+       <artifactId>jersey-client</artifactId>
+       <version>2.30.1</version>
+    </dependency>
+    <dependency>
+       <groupId>org.glassfish.jersey.inject</groupId>
+       <artifactId>jersey-hk2</artifactId>
+       <version>2.30.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 </project>
